--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,17 +7,19 @@ keywords = ["arbitrum", "ethereum", "stylus", "alloy", "marketplace"]
 description = "Decentralized Task Marketplace on Arbitrum Stylus"
 
 [dependencies]
-alloy-primitives = "0.8"
-alloy-sol-types = "0.8"
-stylus-sdk = "0.9"
+alloy-primitives = {version ="0.8", default-features = false }
+alloy-sol-types = { version = "0.8", default-features = false }
+stylus-sdk = {version = "0.9"}
 hex = { version = "0.4", default-features = false }
+#motsu = "0.10.0"
+openzeppelin-stylus = "0.3.0"
 
 [dev-dependencies]
 stylus-sdk = { version = "0.9", features = ["stylus-test"] }
 
 [features]
 default = ["mini-alloc"]
-export-abi = ["stylus-sdk/export-abi"]
+ export-abi = ["stylus-sdk/export-abi", "openzeppelin-stylus/export-abi"]
 debug = ["stylus-sdk/debug"]
 mini-alloc = ["stylus-sdk/mini-alloc"]
 
