--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "ethers": "^6.13.5",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.477.0",
+    "mongodb": "^6.20.0",
     "next": "15.2.1",
     "next-themes": "^0.4.5",
     "react": "^19.0.0",
